# is-troo

./: LICENSE  README.md  pyproject.toml
src/is_troo/: __init__.py  analyzers.py  eval.py  exceptions.py
src/is_troo.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
