[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "is_troo"
version = "1.0.0"
description = "The only package you'll ever need for finally figuring out what that expression evals to!"
authors = [
  { name = "Axo", email = "benjaminvpage@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
keywords = ["truth", "truthy", "trooth"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Libraries"
]

[project.urls]
Homepage = "https://github.com/w0termel0n/is-troo"

[tool.setuptools.packages.find]
where = ["src"]