[build-system]
requires = ["setuptools >= 64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "is_troo"
version = "1.0.0"
description = "The only package you'll ever need for finally figuring out what that expression evals to!"
authors = [
  { name = "Axo", email = "benjaminvpage@gmail.com" }
]
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.8"
keywords = ["truth", "truthy", "trooth"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/w0termel0n/is-troo"

[tool.setuptools.packages.find]
where = ["src"]